# fabric_cf/orchestrator/core/orchestrator_handler.py
@@ -33,11 +33,13 @@ from fabric_mb.message_bus.messages.auth_avro import AuthAvro
 from fabric_mb.message_bus.messages.poa_avro import PoaAvro
 from fabric_mb.message_bus.messages.reservation_mng import ReservationMng
 from fabric_mb.message_bus.messages.slice_avro import SliceAvro
+from fim.graph.abc_property_graph import ABCPropertyGraph
 from fim.graph.networkx_property_graph_disjoint import NetworkXGraphImporterDisjoint
 from fim.slivers.base_sliver import BaseSliver
 from fim.slivers.network_service import NetworkServiceSliver
-from fim.user import GraphFormat
-from fim.user.topology import ExperimentTopology
+from fim.user import GraphFormat, Node, NodeType
+from fim.user.topology import ExperimentTopology, AdvertizedTopology
+from fim.view_only_dict import ViewOnlyDict
 
 from fabric_cf.actor.core.common.event_logger import EventLoggerSingleton
 from fabric_cf.actor.core.kernel.poa import PoaStates
@@ -112,9 +114,21 @@ class OrchestratorHandler:
         except Exception as e:
             self.logger.error(f"Error occurred: {e}", stack_info=True)
 
+    def build_broker_query_model(self, controller: ABCMgmtControllerMixin, level: int, graph_format: GraphFormat = GraphFormat.GRAPHML,
+                                 start: datetime = None, end: datetime = None) -> str:
+        try:
+            saved_bqm = self.controller_state.get_saved_bqm(graph_format=GraphFormat.GRAPHML, level=0)
+            if saved_bqm and saved_bqm.get_bqm() and len(saved_bqm.get_bqm()):
+
+                return ""
+        except Exception as e:
+            self.logger.error(f"Exception occurred build_broker_query_model e: {e}")
+            self.logger.error(traceback.format_exc())
+
     def discover_broker_query_model(self, *, controller: ABCMgmtControllerMixin, token: str = None,
                                     level: int = 10, graph_format: GraphFormat = GraphFormat.GRAPHML,
-                                    force_refresh: bool = False, start: datetime = None, end: datetime) -> str or None:
+                                    force_refresh: bool = False, start: datetime = None,
+                                    end: datetime = None, includes: str = None, excludes: str = None) -> str or None:
         """
         Discover all the available resources by querying Broker
         :param controller Management Controller Object
@@ -124,6 +138,8 @@ class OrchestratorHandler:
         :param force_refresh: Force fetching a fresh model from Broker
         :param start: start time
         :param end: end time
+        :param includes: comma separated lists of sites to include
+        :param excludes: comma separated lists of sites to exclude
         :return str or None
         """
         broker_query_model = None
@@ -137,17 +153,28 @@ class OrchestratorHandler:
                     saved_bqm.start_refresh()
 
         if broker_query_model is None:
-            broker = self.get_broker(controller=controller)
-            if broker is None:
-                raise OrchestratorException("Unable to determine broker proxy for this controller. "
-                                            "Please check Orchestrator container configuration and logs.")
+            if level != 2:
+                saved_bqm = self.controller_state.get_saved_bqm(graph_format=GraphFormat.GRAPHML, level=0)
+                if saved_bqm and saved_bqm.get_bqm() and len(saved_bqm.get_bqm()):
+                    broker_query_model = controller.build_broker_query_model(level_0_broker_query_model=saved_bqm.get_bqm(),
+                                                                             level=level, graph_format=graph_format,
+                                                                             start=start, end=end, includes=includes,
+                                                                             excludes=excludes)
 
-            model = controller.get_broker_query_model(broker=broker, id_token=token, level=level,
-                                                      graph_format=graph_format, start=start, end=end)
-            if model is None or model.get_model() is None or model.get_model() == '':
-                raise OrchestratorException(http_error_code=NOT_FOUND, message=f"Resource(s) not found for "
-                                                                               f"level: {level} format: {graph_format}!")
-            broker_query_model = model.get_model()
+            # Request the model from Broker as a fallback
+            if not broker_query_model:
+                broker = self.get_broker(controller=controller)
+                if broker is None:
+                    raise OrchestratorException("Unable to determine broker proxy for this controller. "
+                                                "Please check Orchestrator container configuration and logs.")
+
+                model = controller.get_broker_query_model(broker=broker, id_token=token, level=level,
+                                                          graph_format=graph_format, start=start, end=end)
+                if model is None or model.get_model() is None or model.get_model() == '':
+                    raise OrchestratorException(http_error_code=NOT_FOUND, message=f"Resource(s) not found for "
+                                                                                   f"level: {level} format: {graph_format}!")
+
+                broker_query_model = model.get_model()
 
             # Do not update cache for advance requests
             if not start and not end:
@@ -156,7 +183,7 @@ class OrchestratorHandler:
         return broker_query_model
 
     def list_resources(self, *, token: str, level: int, force_refresh: bool = False, start: datetime = None,
-                       end: datetime) -> dict:
+                       end: datetime, includes: str = None, excludes: str = None) -> str:
         """
         List Resources
         :param token Fabric Identity Token
@@ -164,6 +191,8 @@ class OrchestratorHandler:
         :param force_refresh: force fetching bqm from broker and override the cached model
         :param start: start time
         :param end: end time
+        :param includes: comma separated lists of sites to include
+        :param excludes: comma separated lists of sites to exclude
         :raises Raises an exception in case of failure
         :returns Broker Query Model on success
         """
@@ -172,12 +201,10 @@ class OrchestratorHandler:
             self.logger.debug(f"list_resources invoked controller:{controller}")
 
             self.__authorize_request(id_token=token, action_id=ActionId.query)
-            
             broker_query_model = self.discover_broker_query_model(controller=controller, token=token, level=level,
                                                                   force_refresh=force_refresh, start=start,
-                                                                  end=end)
-
-            return ResponseBuilder.get_broker_query_model_summary(bqm=broker_query_model)
+                                                                  end=end, includes=includes, excludes=excludes)
+            return broker_query_model
 
         except Exception as e:
             self.logger.error(traceback.format_exc())
@@ -195,7 +222,6 @@ class OrchestratorHandler:
             controller = self.controller_state.get_management_actor()
             self.logger.debug(f"portal_list_resources invoked controller:{controller}")
 
-            broker_query_model = None
             graph_format = self.__translate_graph_format(graph_format=graph_format_str)
             broker_query_model = self.discover_broker_query_model(controller=controller, level=1,
                                                                   graph_format=graph_format)
